<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.rarnhold.myapplication.MainActivity">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/nome"
            android:id="@+id/txtID"
            android:layout_row="0"
            android:layout_column="0" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/edtNome"
            android:hint="@string/hintNome"
            android:layout_row="0"
            android:layout_column="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/sobrenome"
            android:id="@+id/txtSobrenome"
            android:layout_row="1"
            android:layout_column="0" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/edtSobrenome"
            android:hint="@string/hintSobrenome"
            android:layout_row="1"
            android:layout_column="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/idade"
            android:id="@+id/txtIdade"
            android:layout_row="2"
            android:layout_column="0" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/edtIdade"
            android:hint="@string/hintIdade"
            android:layout_row="2"
            android:layout_column="1" />

        <TextView
            android:layout_width="68dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/sexo"
            android:id="@+id/txtSexo"
            android:layout_row="3"
            android:layout_column="0"
            android:layout_rowSpan="2"
            android:layout_gravity="left" />

        <RadioGroup
            android:layout_width="212dp"
            android:layout_height="wrap_content"
            android:layout_row="4"
            android:layout_column="1">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sexoMasculino"
                android:id="@+id/sexoMasculino" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sexoFeminino"
                android:id="@+id/sexoFeminino" />
        </RadioGroup>

        <Button
            android:layout_width="204dp"
            android:layout_height="wrap_content"
            android:text="@string/btnCadastrar"
            android:id="@+id/btnCadastrar"
            android:onClick="acaoBotao"
            android:layout_row="15"
            android:layout_column="1" />


    </GridLayout>
</RelativeLayout>
